--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "cordova": {
     "id": "cordova-sqlite-legacy-build-support",
     "platforms": [
-      "ios",
+      "ios"
     ]
   },
   "repository": {
