--- a/plugin.xml
+++ b/plugin.xml
@@ -18,7 +18,7 @@
     </js-module>
 
     <!-- android -->
-    <platform name="android">
+    <platform name="android-off">
         <!-- Cordova >= 3.0.0 -->
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="SQLitePlugin">
